--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -93,6 +93,10 @@
     background-color: rgba(255, 255, 255, 0.25);
     margin-left: 14px;
     margin-right: 14px;
+    @media (max-width: 645px) {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
   }
 
   &--add {
@@ -134,6 +138,10 @@
     align-items: center;
     line-height: 23px;
     padding: 12px 25px;
+    @media (max-width: 645px) {
+      padding: 10px 15px;
+      font-size: 10px;
+    }
 
     svg {
       margin-right: 8px;
@@ -143,6 +151,9 @@
     span {
       font-weight: 600;
       font-size: 16px;
+      @media (max-width: 645px) {
+        font-size: 13px;
+      }
     }
   }
 }
