--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -1,8 +1,14 @@
 @import '../variables';
 
 .categories {
+  // width: 100%;
   ul {
     display: flex;
+    row-gap: 10px;
+    flex-wrap: wrap;
+    @media (max-width: 730px) {
+      flex-wrap: nowrap;
+    }
 
     li {
       background-color: #f9f9f9;
