--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,10 +23,16 @@
       letter-spacing: 1%;
       text-transform: uppercase;
       font-weight: 800;
+      @media (max-width: 440px) {
+        font-size: 20px;
+      }
     }
 
     p {
       color: #7b7b7b;
+      @media (max-width: 440px) {
+        font-size: 12px;
+      }
     }
   }
 }
