--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -5,15 +5,12 @@
   text-align: center;
   margin-bottom: 65px;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-  }
-
   &__image {
     width: 260px;
   }
 
   &__title {
+    height: 60px;
     font-size: 20px;
     font-weight: 900;
     letter-spacing: 1%;
